--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8"/>
-	<title>testuje stronke</title>
+	<title>testuje jeszcze raz</title>
 	<meta name="discription" content="testuje"/>
 	<meta name="keyworlds" content="zxcvbnm"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
