--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<title>testuje jeszcze raz</title>
-	<meta name="discription" content="testuje"/>
+	<meta name="discription" content="lq u szczeny xD"/>
 	<meta name="keyworlds" content="zxcvbnm"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 </head>
