--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 	<h1>lq u szczeny xD</h1>
-        <h2> dobry fest turbo jest<\h2>
+        <h2> dobry fest turbo jest</h2>
 
 </body>
 </html>
