--- a/about.html
+++ b/about.html
@@ -7,6 +7,8 @@
 	<meta name="discription" content="lq u szczeny xD"/>
 	<meta name="keyworlds" content="zxcvbnm"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1260390373545887"
+     crossorigin="anonymous"></script>
 </head>
 
 <body>
